# meegoo_pb

./: .gitignore  CMakeLists.txt  README.md
doc/: 原理介绍.html  原理介绍.md
include/meegoopb/: define.h  pb.h
include/meegoopb/impl/: calc_size.h  clear.h  payload_stream.h  reader.h  trait.h  util.h  writer.h
src/: main.cpp  test_struct.h  test_struct_refl.h
test/: benchmark.cpp  campatibility.cpp  main.cpp  payload_stream.cpp  pb_test.cpp  rosmsg.cpp  test.pb.cc  test.pb.h  test.proto
